# FHIR-in-C

./: .gitignore  CMakeLists.txt  Native_FHIR.sln  README.md  build.bat  build.sh  cmake_install.cmake  notes.txt  output.parquet  simple_use.cc  tests.txt
bundles/: 008a1536-cf42-6f72-657b-c14e201ee475.json
dll/: build.bat  deserialization_dll.cc  native_deserializer.cc  native_deserializer.h
fhir/: profiles-types.json  view-definition.json
fhir_path/: TODO.txt  build.bat  output.parquet  patient.json  view_definitions.json
fhir_path/src/: data_table.cc  data_table.h  fhir_class_definitions.h  fhir_class_metadata.h  fhir_path.cc  fhir_path.h  fhir_path_listener.h  fhir_path_test.cc  fhir_path_visitor.cc  fhir_path_visitor.h  print_collection.cc  test_execution.cc  test_execution.h
fhir_path/src/antlr_generated/: fhirpathLexer.cpp  fhirpathLexer.h  fhirpathVisitor.cpp  fhirpathVisitor.h
fhir_path/src/data_table/: data_table.cc  data_table.h
fhir_path/src/execution/: number.h  path_execution.cc  path_execution.h
fhir_path/src/fhir_path_visitor/: fhir_path_visitor.cc  fhir_path_visitor.h
fhir_path/src/number/: number.cc  number.h
fhir_path/src/parquet/: apache_arrow.cc  apache_arrow.h
fhir_path/src/resource_string_provider/: resource_string_provider.cc  resource_string_provider.h
fhir_path/src/test_execution/: test_execution.cc  test_execution.h
fhir_path/src/view_definition/: view_definition.cc  view_definition.h
main.dir/Debug/: main.exe.recipe
main.dir/Debug/main.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
simple_use/: build.bat  simple_use.cc  tests.txt
src/: arena.h  bitfield.cc  core.h  decimal.cc  decimal.h  exporter.cc  fhir_class.cc  fhir_class.h  fhir_r4_inc.h  fhir_r4_types.h  fhir_structure.cc  fhir_structure.h  hash_table.cc  hash_table.h  iso8601_time.cc  iso8601_time.h  main.cc  manual_deserialization.h  manual_deserialization_legacy.cc  manual_deserialization_simdjson.cc  metadata.cc  metadata.h  native_deserializer.cc  native_deserializer.h  native_fhir_inc.cc  native_fhir_inc.h  nullable_int.h  os.cc  os.h  profiler.cc  resource.cc  resource.h  resources-gperf.cc  string8.cc  string8.h  test.cc
src/base/: arena.c  arena.h  base_inc.cc  base_inc.h  bitfield.cc  bitfield.h  core.c  core.h  logging.cc  logging.h  nullable.h  os.cc  os.h  profiler.cc  string8.cc  string8.h  threading.c  threading.h
src/code_generation/exporter/: exporter.cc  exporter.h
src/code_generation/fhir_structure/: fhir_structure.cc  fhir_structure.h
src/code_generation/metadata/: metadata.cc  metadata.h
src/code_generation/resource/: resource.cc  resource.h
src/deserializer/: deserializer.h  deserializer_test.cc  manual_deserialization_simdjson.cc  native_deserializer.h
src/entry_points/: deserialization_dll.cc  main.cc  view_runner.cc
src/exporter/: exporter.cc  exporter.h
src/fhir_class/: fhir_class.cc  fhir_class.h
src/fhir_path/: fhir_path.cc  fhir_path.h  fhir_path_inc.cc  fhir_path_inc.h
src/fhir_path/execution/: path_execution.cc  path_execution.h
src/fhir_path/fhir_path_visitor/: fhir_path_visitor.cc  fhir_path_visitor.h
src/fhir_path/number/: number.cc  number.h
src/fhir_structure/: fhir_structure.cc  fhir_structure.h
src/iso8601_time/: iso8601_time.cc  iso8601_time.h
src/metadata/: metadata.cc  metadata.h
src/native_fhir/: native_fhir_inc.cc  native_fhir_inc.h
src/native_fhir/decimal/: decimal.cc
src/native_fhir/fhir_class/: fhir_class.cc  fhir_class.h
src/native_fhir/iso8601_time/: iso8601_time.cc  iso8601_time.h
src/resource/: resource.cc  resource.h
src/resource_string_provider/: resource_string_provider.cc  resource_string_provider.h
src/view_runner/: view_runner_inc.cc  view_runner_inc.h
src/view_runner/data_table/: data_table.cc  data_table.h
src/view_runner/parquet/: apache_arrow.cc
src/view_runner/test_execution/: test_execution.cc
src/view_runner/view_definition/: view_definition.cc  view_definition.h
test/: test.json
test_bundles/: 100002.json
tests/: build.bat  tests.cc
x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog
x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
